Misc spacing issues and minor code change
- CSS changes made during meeting with Nicole and Lori
- jQuery to "show" Team 2nd level menu (still need the HOVER - code)

--- a/sites/all/modules/custom/idmteam/css/team.css
+++ b/sites/all/modules/custom/idmteam/css/team.css
@@ -1,10 +1,12 @@
 @charset "UTF-8";
 
-.inline li.team-1 {
+.inline li.team-1,
+.inline li.research {
   padding: 0 10px 0 10px;
 }
 
-ul#team {
+ul#team,
+ul#team-research {
 
   text-transform: uppercase;
   margin: 10px;
